--- a/src/components/studentCard/StudentCard.module.css
+++ b/src/components/studentCard/StudentCard.module.css
@@ -1,6 +1,7 @@
-.card_image_fluid{
+.card_fluid_image{
     width: 100%;
     aspect-ratio: 9/6;
     object-fit: cover;
     object-position: center center;
 }
+
